--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </section>
       <!--Section: Intro-->  
 
-      <hr class="my-5">
+      <hr class="my-4">
 
       <!--Section: Main info-->
       <section id="projects" class="wow fadeIn">
@@ -148,7 +148,8 @@
           <div class="col-sm-12 col-md-12">
             <h2 class="h2 mb-4">Projects</h2>
             <p class="font-weight-normal mb-5" style="text-align: justify; font-size: 17px;">
-              Here is a short description about software development projects i have been involved in include a highlight of each user interface design.</p>
+              Here is a short description about software development projects i have been 
+              involved in include each user interface design highlight.</p>
           </div>
 
           <!--Grid column-->
@@ -205,13 +206,15 @@
           <div class="col-md-5 mb-4">
 
             <!-- Project 1 Desc-->
-            <h3 class="h3 mb-3 pt-3">Computer Based Essay Test</h3>
-            <p class="font-weight-normal" style="text-align: justify; font-size: 18px">
-            To simplify essay exam procces and minimze use of papers, im involved in 
-            this research to develop a local Mathematics Department of UNJ website for 
-            arrange and conduct online daily or final essay exams.</p>
+            <h3 class="h3 mb-3 pt-1">Computer Based Essay Test</h3>
+            <p class="font-weight-normal" style="text-align: justify; font-size: 17px">
+            This is a research to develop a local Mathematics Department of UNJ website for 
+            arrange and conduct online daily or final essay exams in order to simplify the proccess
+            and minimize use of the paper.</p>
             <p class="font-weight-normal" style="font-size: 18px;">
-              Made with <strong>Laravel</strong> and <strong>Bootstrap 3</strong> framework.</p>
+              Made with <strong>Laravel</strong> and <strong>Bootstrap 3</strong> framework and
+              it have a copyrights registered.
+            </p>
             <!-- End of Project 1 Desc-->
 
           </div>
@@ -271,12 +274,14 @@
           <div class="col-md-5 mb-4">
 
             <!-- Project 2 Desc-->
-            <h3 class="h3 mb-3 pt-3">Official Letter Management Web</h3>
-            <p class="font-weight-normal" style="text-align: justify; font-size: 18px">
+            <h3 class="h3 mb-3 pt-1">Official Letter Management Web</h3>
+            <p class="font-weight-normal" style="text-align: justify; font-size: 17px">
               This was my internship project based on Information division of BNPB needs 
-              to create and manage official letters more ease and well-organized, 
-              and it is known that the system is still in use today.
-            <p class="font-weight-normal" style="font-size: 18px;">Made with <strong>Code Igniter</strong> and <strong>Material Design Bootstrap.</strong></p>
+              to create and manage official letters more ease and well-organized, i also
+              conduct a usability assessment on this for my thesis research.
+            <p class="font-weight-normal" style="font-size: 18px;">Made with <strong>
+            Code Igniter</strong> and <strong>Material Design Bootstrap</strong> and
+            it is known that it is still used today.</p>
             <!-- End of Project 1 Desc-->
 
           </div>
@@ -336,7 +341,7 @@
           <div class="col-md-5 mb-4">
 
             <!-- Project 1 Desc-->
-            <h3 class="h3 mb-3 pt-3">National Science Festival Web</h3>
+            <h3 class="h3 mb-3 pt-1">National Science Festival Web</h3>
             <p style="text-align: justify; font-size: 18px">To simplify essay exam procces 
             and minimze use of papers, im involved in this research to develop a local 
             Mathematics Department of UNJ website for arrange and conduct online daily or final essay exams.</p>
