--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
       <hr class="my-4">
 
-      <!--Section: Main info-->
+      <!--Section: Projects-->
       <section id="projects" class="wow fadeIn">
 
         <!--Grid row-->
@@ -356,10 +356,12 @@
         <!--Grid row-->
 
       </section>
-      <!--Section: Main info-->
+      <!--Section: Projects info-->
+
+            <hr class="my-4">
 
       <!--Section: Study-->
-      <section id="study" class="wow fadeIn" style="margin-top: 10%">
+      <section id="study" class="wow fadeIn" style="margin-top: 5%">
 
         <!--Grid row-->
         <div class="wow fadeIn">
