--- a/index.html
+++ b/index.html
@@ -377,6 +377,20 @@
                 <!--Grid row-->
                 <div class="row mb-4 wow fadeIn">
 
+                    <!--Grid column-->
+                    <div class="col-lg-4 col-md-12 mb-4">
+
+                    	<div class="text-center mb-4">
+                        <a href='https://www.freepik.com/'>
+                          <img src="img/1.jpg" class="img-fluid mb-4" alt="" width="230" height="230">
+                        </a><br>
+                        <h5 class="h5">Scholarship Awardee</h5>
+                        <p>Peningkatan Prestasi Akademik Sholarship awardee, by
+                        Kemenristekdikti in 2018</p>
+                      </div>
+
+                    </div>
+                    <!--Grid column-->
 
                     <!--Grid column-->
                     <div class="col-lg-4 col-md-12 mb-4">
