update award illustratrions

--- a/index.html
+++ b/index.html
@@ -399,9 +399,8 @@
                         <a href='https://www.freepik.com/'>
                           <img src="img/2.jpg" class="img-fluid mb-4" alt="" width="230" height="230">
                         </a><br>
-                        <h5 class="h5">Scholarship Awardee</h5>
-                        <p>Peningkatan Prestasi Akademik Sholarship awardee, by
-                        Kemenristekdikti in 2018</p>
+                        <h5 class="h5">Speaking Competition</h5>
+                        <p>Winning second place Story Telling Competition in Math Scientifics Festival of UNJ in 2019</p>
                       </div>
 
                     </div>
@@ -414,7 +413,7 @@
                         <a href='https://www.freepik.com/'>
                           <img src="img/3.jpg" class="img mb-4" alt="" width="230" height="230">  
                         </a><br>
-                        <h5 class="h5">Scholarship Awardee</h5>
+                        <h5 class="h5">Writing Competition</h5>
                         <p>Peningkatan Prestasi Akademik Sholarship awardee, by
                         Kemenristekdikti in 2018</p>
                       </div>
