add pict source

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                     <div class="col-lg-4 col-md-12 mb-4">
 
                     	<div class="text-center mb-4">
-                        <a href='https://www.freepik.com/'>
+                        <a href='https://stories.freepik.com/'>
                           <img src="img/1.jpg" class="img-fluid mb-4" alt="" width="230" height="230">
                         </a><br>
                         <h5 class="h5">Scholarship Awardee</h5>
@@ -396,7 +396,7 @@
                     <div class="col-lg-4 col-md-12 mb-4">
 
                     	<div class="text-center mb-4">
-                        <a href='https://www.freepik.com/'>
+                        <a href='https://stories.freepik.com/'>
                           <img src="img/2.jpg" class="img-fluid mb-4" alt="" width="230" height="230">
                         </a><br>
                         <h5 class="h5">Speaking Competition</h5>
@@ -410,12 +410,11 @@
                     <div class="col-lg-4 col-md-12 mb-4">
 
                       <div class="text-center mb-4">
-                        <a href='https://www.freepik.com/'>
+                        <a href='https://stories.freepik.com/'>
                           <img src="img/3.jpg" class="img mb-4" alt="" width="230" height="230">  
                         </a><br>
                         <h5 class="h5">Writing Competition</h5>
-                        <p>Peningkatan Prestasi Akademik Sholarship awardee, by
-                        Kemenristekdikti in 2018</p>
+                        <p>Winning second place Essay Competition in UNJ's Teachers Day annual event in 2019</p>
                       </div>
 
                     </div>
