project grouping in rows

--- a/index.html
+++ b/index.html
@@ -151,9 +151,11 @@
               Here is a short description about software development projects i have been 
               involved in include each user interface design highlight.</p>
           </div>
+        </div>
 
+        <div class="row mb-4">
           <!--Grid column-->
-          <div class="col-md-6 mb-4 pb-5">
+          <div class="col-md-6 mb-4">
 
             <!--Carousel Wrapper-->
               <div id="carousel-example-1z" class="carousel slide carousel-fade" data-ride="carousel">
@@ -219,9 +221,11 @@
 
           </div>
           <!--Grid column-->
+        </div>
 
+        <div class="row mb-4">
           <!--Grid column-->
-          <div class="col-md-6 mb-4 pb-5">
+          <div class="col-md-6 mb-4">
 
             <!--Carousel Wrapper-->
               <div id="carousel-example-1z" class="carousel slide carousel-fade" data-ride="carousel">
@@ -285,7 +289,9 @@
 
           </div>
           <!--Grid column-->
+        </div>          
 
+        <div class="row mb-4">
           <!--Grid column-->
           <div class="col-md-6 mb-4">
 
@@ -350,9 +356,7 @@
 
           </div>
           <!--Grid column-->
-
-        </div>
-        <!--Grid row-->
+        </div>          
 
       </section>
       <!--Section: Projects info-->
