try new structure

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <!--Main layout-->
   <main>
     <nav class="navbar navbar-expand-lg navbar-dark indigo" id="top">
-      <a class="navbar-brand" href="#">Kelik Is C</a>
+      <a class="navbar-brand font-weight-normal" href="#"><i class="fas fa-desktop pr-1"></i> Portofolio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -69,7 +69,7 @@
           <ul class="navbar-nav mr-auto mt-lg-0">
           </ul>
           <span>
-            <ul class="navbar-nav">
+            <ul class="navbar-nav font-weight-normal">
             <li class="nav-item">
               <a class="nav-link" href="#study">Study</a>
             </li>
@@ -87,16 +87,10 @@
     	<button onclick="topFunction()" class="btn btn-indigo" id="myBtn"><i class="fas fa-chevron-up"></i></button>
       
       <!--Section: Intro-->
-      <section class="wow fadeIn" style="margin-top: 5%">
+      <section class="wow fadeIn" style="margin-top: 8%">
 
         <!--Grid row-->
-        <div class="row wow fadeIn">
-
-          <!-- News jumbotron -->
-            <div class="jumbotron text-center hoverable p-4 blue-grey lighten-5">
-
-              <!-- Grid row -->
-              <div class="row">
+        <div class="row wow fadeIn text-center">
 
                 <!-- Grid column -->
                 <div class="col-md-4 col-sm-12 mt-5">
@@ -107,18 +101,16 @@
                 <!-- Grid column -->
 
                 <!-- Grid column -->
-                <div class="col-md-7 text-md-left mt-3">
+                <div class="col-md-7 col-sm-12 text-md-left mt-3">
 
+                  <h3 class="h3">Hello there!</h3>
                   <!-- Excerpt -->
-                  <a href="#!" class="indigo-text">
-                    <h6 class="h6 pb-1"><i class="fas fa-desktop pr-1"></i> Portofolio</h6>
-                  </a>
+                  <h6 class="indigo-text h6 mb-4">My name is Kelik Is Cahyanto</h6>
 
-                  <h3 class="h3 mb-3">Kelik Is Cahyanto</h3>
-
-                  <p class="font-weight-normal" style="text-align: justify; font-size: 17px;">Im computer science fresh graduate 
-                        from State University of Jakarta. I am experienced in software developments and student organization.
-                        Have a strong interest working on software quality assurance and user experience research.</p>
+                  <p class="font-weight-normal" style="text-align: justify; font-size: 17px;">
+                    Im computer science fresh graduate from State University of Jakarta. 
+                    I am experienced in software developments and student organization.
+                    Have a strong interest working on user experience research and product development.</p>
                   <p class="font-weight-normal"><a><strong>DKI Jakarta</strong></a>, Indonesia</p>
 
                   <a class="btn btn-indigo mb-4">Read more</a>
@@ -126,31 +118,27 @@
                 </div>
                 <!-- Grid column -->
 
-              </div>
-              <!-- Grid row -->
-
-            </div>
-            <!-- News jumbotron -->
-
         </div>
         <!--Grid row-->
         
       </section>
       <!--Section: Intro-->  
-
+      <br>
       <hr class="my-4">
-
+      <br>
       <!--Section: Projects-->
       <section id="projects" class="wow fadeIn">
 
         <!--Grid row-->
         <div class="row">
-          <div class="col-sm-12 col-md-12">
-            <h2 class="h2 mb-4">Projects</h2>
+          <div class="col-md-1"></div>
+          <div class="col-sm-12 col-md-10">
+            <h2 class="h2 mb-4 text-center">Experiences</h2>
             <p class="font-weight-normal mb-5" style="text-align: justify; font-size: 17px;">
-              Here is a short description about software development projects i have been 
-              involved in include each user interface design highlight.</p>
+              Here is a short description of software development projects i have been 
+              involved in with user interface design highlight.</p>
           </div>
+          <div class="col-md-1"></div>
         </div>
 
         <div class="row mb-4">
