update award copywriting

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
           <!-- <div class="col-md-1"></div> -->
           <div class="col-sm-12 col-md-12">
             
-            <h2 class="h2 mb-5">Projects</h2>
+            <h2 class="h2 mb-5">Awards</h2>
 
             <!--Section: Cards-->
             <section class="text-center">
@@ -377,8 +377,7 @@
                           <img src="img/1.jpg" class="img-fluid mb-4" alt="" width="230" height="230">
                         </a><br>
                         <h5 class="h5">Scholarship Awardee</h5>
-                        <p>Peningkatan Prestasi Akademik Sholarship awardee, by
-                        Kemenristekdikti in 2018</p>
+                        <p>Awarded a scholarship from Research, Tech and High Education Minister in 2018</p>
                       </div>
 
                     </div>
@@ -392,7 +391,7 @@
                           <img src="img/2.jpg" class="img-fluid mb-4" alt="" width="230" height="230">
                         </a><br>
                         <h5 class="h5">Speaking Competition</h5>
-                        <p>Winning second place Story Telling Competition in Math Scientifics Festival of UNJ in 2019</p>
+                        <p>Winning 2nd place Story Telling Competition in Mathematics Festival of UNJ in 2019</p>
                       </div>
 
                     </div>
@@ -406,7 +405,7 @@
                           <img src="img/3.jpg" class="img mb-4" alt="" width="230" height="230">  
                         </a><br>
                         <h5 class="h5">Writing Competition</h5>
-                        <p>Winning second place Essay Competition in UNJ's Teachers Day annual event in 2019</p>
+                        <p>Winning 2nd place Essay Competition in UNJ's Teachers Day annual event in 2019</p>
                       </div>
 
                     </div>
