add stepper as timeline

--- a/index.html
+++ b/index.html
@@ -423,20 +423,66 @@
       </section>
       <!--Section: Study-->
 
-      <section id="award">
+            <hr class="my-4">
+
+      <!--Section: Organization-->
+      <section id="org">
 
         <!--Grid row-->
-        <div class="wow fadeIn">
+        <div class="wow fadeIn" style="margin-top: 5%">
 
           <!--Grid column-->
           <div class="col-sm-12 col-md-12">
            
-            <h3 class="h3 mb-4">Award</h3>
+            <h3 class="h3 mb-4">Organization</h3>
 
             <p class="text-justify" style="line-height: 1cm; font-size: 18px">
               Alongside working in so much course and tasks in class and organzation,
               i won some competition and have some award achieved in university
               </p>
+
+              <!-- Horizontal Steppers -->
+              <div class="row">
+                <div class="col-md-5"></div>
+
+                <div class="col-md-4 col-sm-12">
+                  <!-- Stepers Wrapper -->
+                  <ul class="stepper stepper-vertical">
+
+                    <!-- First Step -->
+                    <li class="active">
+                      <a href="#!">
+                        <span class="circle">1</span>
+                        <span class="label text-md-left" style="text-align: left;">BEM Matematika UNJ 2017/2018<br>
+                        <p style="font-weight: lighter;">Kepala Departemen Advokasi</p></span>
+                      </a>
+                    </li>
+
+                    <!-- Second Step -->
+                    <li class="active">
+                      <a href="#!">
+                        <span class="circle">2</span>
+                        <span class="label">Second step<br><p style="font-weight: lighter;">
+                        second step</p></span>
+                      </a>
+                    </li>
+
+                    <!-- Third Step -->
+                    <li class="active">
+                      <a href="#!">
+                        <span class="circle">3</span>
+                        <span class="label">Third step<br><p style="font-weight: lighter;">
+                        third step</p></span>
+                      </a>
+                    </li>
+
+                  </ul>
+                  <!-- /.Stepers Wrapper -->
+                  </div>
+                  <div class="col-md-"></div>
+                </div>
+              </div>
+              <!-- /.Horizontal Steppers -->
               <div style="height:15px"></div>
 
               <!--Award 5-->
