--- a/index.html
+++ b/index.html
@@ -453,8 +453,9 @@
                     <li class="active">
                       <a href="#!">
                         <span class="circle">1</span>
-                        <span class="label text-md-left" style="text-align: left;">BEM Matematika UNJ 2017/2018<br>
-                        <p style="font-weight: lighter;">Kepala Departemen Advokasi</p></span>
+                        <span class="label text-md-left" style="text-align: left;">2016<br>
+                        <p style="font-weight: lighter;">Staff Departemen Advokasi 
+                        <br>BEM Matematika UNJ</p></span>
                       </a>
                     </li>
 
@@ -462,8 +463,9 @@
                     <li class="active">
                       <a href="#!">
                         <span class="circle">2</span>
-                        <span class="label">Second step<br><p style="font-weight: lighter;">
-                        second step</p></span>
+                        <span class="label text-md-left" style="text-align: left;">2017<br>
+                        <p style="font-weight: lighter;">Kepala Departemen Advokasi 
+                        <br>BEM Matematika UNJ</p></span>
                       </a>
                     </li>
 
@@ -471,8 +473,39 @@
                     <li class="active">
                       <a href="#!">
                         <span class="circle">3</span>
-                        <span class="label">Third step<br><p style="font-weight: lighter;">
-                        third step</p></span>
+                        <span class="label text-md-left" style="text-align: left;">2018<br>
+                        <p style="font-weight: lighter;">Divisi Web Development 
+                        <br>Kelompok Studi Default UNJ</p></span>
+                      </a>
+                    </li>
+
+                    <!-- Fourth Step -->
+                    <li class="active">
+                      <a href="#!">
+                        <span class="circle">4</span>
+                        <span class="label text-md-left" style="text-align: left;">2018<br>
+                        <p style="font-weight: lighter;">Biro Pengembangan SDM 
+                        <br>Kelompok Studi Default UNJ</p></span>
+                      </a>
+                    </li>
+
+                    <!-- Fifth Step -->
+                    <li class="active">
+                      <a href="#!">
+                        <span class="circle">5</span>
+                        <span class="label text-md-left" style="text-align: left;">2018<br>
+                        <p style="font-weight: lighter;">Kepala Departemen Advokasi 
+                        <br>BEM Fakultas MIPA UNJ</p></span>
+                      </a>
+                    </li>
+
+                    <!-- Sixth Step -->
+                    <li class="active">
+                      <a href="#!">
+                        <span class="circle">6</span>
+                        <span class="label text-md-left" style="text-align: left;">2019<br>
+                        <p style="font-weight: lighter;">Kepala Divisi Pelayanan & Isu 
+                        <br>Departemen Advokasi BEM UNJ</p></span>
                       </a>
                     </li>
 
