--- a/index.html
+++ b/index.html
@@ -131,14 +131,13 @@
 
         <!--Grid row-->
         <div class="row">
-          <div class="col-md-1"></div>
-          <div class="col-sm-12 col-md-10">
-            <h2 class="h2 mb-4 text-center">Experiences</h2>
-            <p class="font-weight-normal mb-5" style="text-align: justify; font-size: 17px;">
+          <div class="col-sm-12 col-md-12">
+            <h3 class="h3 mb-4">Experiences</h3>
+            <p class="text-justify mb-4" style="line-height: 1cm; font-size: 18px">
+              
               Here is a short description of software development projects i have been 
               involved in with user interface design highlight.</p>
           </div>
-          <div class="col-md-1"></div>
         </div>
 
         <div class="row mb-4">
@@ -361,7 +360,7 @@
           <!-- <div class="col-md-1"></div> -->
           <div class="col-sm-12 col-md-12">
             
-            <h2 class="h2 mb-5">Awards</h2>
+            <h3 class="h3 mb-5">Awards</h3>
 
             <!--Section: Cards-->
             <section class="text-center">
@@ -437,8 +436,9 @@
             <h3 class="h3 mb-4">Organization</h3>
 
             <p class="text-justify" style="line-height: 1cm; font-size: 18px">
-              Alongside working in so much course and tasks in class and organzation,
-              i won some competition and have some award achieved in university
+              I have been actively join student organization with many duties such as held an national event, 
+              team management, social activities, coaching and public speaking, loby and negotiating etc.
+              Here is my organizations record in timeline.
               </p>
 
               <!-- Horizontal Steppers -->
