update exp desc

--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
           <div class="col-sm-12 col-md-12">
             <h3 class="h3 mb-4">Experiences</h3>
             <p class="text-justify mb-4" style="line-height: 1cm; font-size: 18px">
-              
-              Here is a short description of software development projects i have been 
-              involved in with user interface design highlight.</p>
+              I have involved in some software development projects during college
+              and mostly is web based. Here is a short description of it you might 
+              want to see with each product user interface design highlight.</p>
           </div>
         </div>
 
-        <div class="row mb-4">
+        <div class="row mb-4 mt-4">
           <!--Grid column-->
           <div class="col-md-6 mb-4">
 
