--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
         </div>
 
         <div class="row mb-4 mt-4">
+
           <!--Grid column-->
           <div class="col-md-6 mb-4">
 
@@ -518,26 +519,6 @@
               <!-- /.Horizontal Steppers -->
               <div style="height:15px"></div>
 
-              <!--Award 5-->
-              <div class="row mb-5">
-                <div class="col-1 text-center">
-                  <i class="fas fa-dragon fa-lg indigo-text"></i>
-                </div>
-                <div class="col-5">
-                  <h6 class="feature-title">2nd place Story Telling Competition</h6>
-                  <p class="grey-text">Festival Keilmiahan Matematika Universitas Negeri Jakarta 2019
-                  </p>
-                </div>
-                <!--Award 6-->
-                <div class="col-1 text-center">
-                  <i class="fas fa-file-alt fa-lg teal-text"></i>
-                </div>
-                <div class="col-5">
-                  <h6 class="feature-title">2nd place Essay Competition</h6>
-                  <p class="grey-text">Harmoni Cinta Guru Universitas Negeri Jakarta 2019
-                  </p>
-                </div>
-              </div>
           <!--/Grid column-->
 
         </div>
@@ -545,6 +526,59 @@
 
       </section>
       <!--Section: Award-->
+
+      <hr class="my-4">
+
+      <!-- Section: Contact-->
+      <section>
+        
+        <!-- News jumbotron -->
+<div class="jumbotron text-center hoverable p-4">
+
+  <!-- Grid row -->
+  <div class="row">
+
+    <!-- Grid column -->
+    <div class="col-md-4 offset-md-1 mx-3 my-3">
+
+      <!-- Featured image -->
+      <div class="view overlay">
+        <img src="https://mdbootstrap.com/img/Photos/Others/laptop-sm.jpg" class="img-fluid" alt="Sample image for first version of blog listing">
+        <a>
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-md-7 text-md-left ml-3 mt-3">
+
+      <!-- Excerpt -->
+      <a href="#!" class="green-text">
+        <h6 class="h6 pb-1"><i class="fas fa-desktop pr-1"></i> Work</h6>
+      </a>
+
+      <h4 class="h4 mb-4">This is title of the news</h4>
+
+      <p class="font-weight-normal">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque, totam
+        rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+        dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur.</p>
+      <p class="font-weight-normal">by <a><strong>Carine Fox</strong></a>, 19/08/2016</p>
+
+      <a class="btn btn-success">Read more</a>
+
+    </div>
+    <!-- Grid column -->
+
+  </div>
+  <!-- Grid row -->
+
+</div>
+<!-- News jumbotron -->
+
+      </section>
 
     </div>
   </main>
