coba intro sect

--- a/index.html
+++ b/index.html
@@ -94,26 +94,26 @@
 
                 <!-- Grid column -->
                 <div class="col-md-4 col-sm-12 mt-5">
-                        <div class="text-center mb-4">
-                          <img src="img/me.png" class="img-fluid mb-4 rounded-circle z-depth-1-half" alt="" width="180" height="180">
+                        <div class="text-center mb-2">
+                          <img src="img/me.png" class="img-fluid mb-2 rounded-circle z-depth-1-half" alt="" width="180" height="180">
                         </div>            
                       </div>
                 <!-- Grid column -->
 
                 <!-- Grid column -->
-                <div class="col-md-7 col-sm-12 text-md-left p-4">
+                <div class="col-md-7 col-sm-12 text-md-left m-3">
 
-                  <h3 class="h3">Hello there!</h3>
+                  <h3 class="h3" style="text-align: left;">Hello there!</h3>
                   <!-- Excerpt -->
-                  <h6 class="indigo-text h6 mb-4">My name is Kelik Is Cahyanto</h6>
+                  <h6 class="indigo-text h6 mb-4" style="text-align: left;">My name is Kelik Is Cahyanto</h6>
 
-                  <p style="text-align: justify; font-size: 17px;">
+                  <p style="text-align: justify; font-size: 18px;">
                     Im computer science fresh graduate from State University of Jakarta. 
                     I am experienced in software developments and student organization.
                     Passionate in user experience research and product development.</p>
-                  <p class="font-weight-normal"><a><strong>DKI Jakarta</strong></a>, Indonesia</p>
+                  <p class="font-weight-normal" style="text-align: left;"><a><strong>DKI Jakarta</strong></a>, Indonesia</p>
 
-                  <a class="btn btn-indigo mb-4">Read more</a>
+                  <a class="btn btn-indigo mb-4" style="float: left;">Read more</a>
 
                 </div>
                 <!-- Grid column -->
