--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
                 <!-- Grid column -->
                 <div class="col-md-4 col-sm-12 mt-5">
-                        <div class="text-center mb-2">
-                          <img src="img/me.png" class="img-fluid mb-2 rounded-circle z-depth-1-half" alt="" width="180" height="180">
+                        <div class="text-center mb-4">
+                          <img src="img/me.png" class="img-fluid mb-4 rounded-circle z-depth-1-half" alt="" width="180" height="180">
                         </div>            
                       </div>
                 <!-- Grid column -->
@@ -103,17 +103,17 @@
                 <!-- Grid column -->
                 <div class="col-md-7 col-sm-12 text-md-left m-3">
 
-                  <h3 class="h3" style="text-align: left;">Hello there!</h3>
+                  <h3 class="h3">Hello there!</h3>
                   <!-- Excerpt -->
-                  <h6 class="indigo-text h6 mb-4" style="text-align: left;">My name is Kelik Is Cahyanto</h6>
+                  <h6 class="indigo-text h6 mb-4">My name is Kelik Is Cahyanto</h6>
 
                   <p style="text-align: justify; font-size: 18px;">
                     Im computer science fresh graduate from State University of Jakarta. 
                     I am experienced in software developments and student organization.
                     Passionate in user experience research and product development.</p>
-                  <p class="font-weight-normal" style="text-align: left;"><a><strong>DKI Jakarta</strong></a>, Indonesia</p>
+                  <p class="font-weight-normal"><a><strong>DKI Jakarta</strong></a>, Indonesia</p>
 
-                  <a class="btn btn-indigo mb-4" style="float: left;">Read more</a>
+                  <a class="btn btn-indigo mb-4">Read more</a>
 
                 </div>
                 <!-- Grid column -->
@@ -521,54 +521,34 @@
       <hr class="my-4">
 
       <!-- Section: Contact-->
-      <section class="pt-4">
-        
-        <!-- News jumbotron -->
-        <div class="jumbotron text-center hoverable">
+      <section id="org">
 
-          <!-- Grid row -->
-          <div class="row">
+        <!--Grid row-->
+        <div class="wow fadeIn" style="margin-top: 5%">
 
-            <!-- Grid column -->
-            <div class="col-md-4 offset-md-1 mx-3 my-3">
+          <!--Grid column-->
+          <div class="col-sm-12 col-md-12">
 
-              <!-- Featured image -->
-              <div class="view overlay">
-                <img src="https://mdbootstrap.com/img/Photos/Others/laptop-sm.jpg" class="img-fluid" alt="Sample image for first version of blog listing">
-                <a>
-                  <div class="mask rgba-white-slight"></div>
-                </a>
+            <div class="row">
+              <div class="col-md-6">
+                <img src="img/contact.png" class="img-fluid mb-4" alt="" width="290" height="290" style="float: right;">
               </div>
 
+              <div class="col-md-6">
+                <h3 class="h3 mb-4">Contact</h3>
+
+            <p class="text-justify" style="font-size: 18px">
+              Look forward to work together with you. 
+              Directly contact me on my social media and create something good for people! 
+            </p>
+            <br>
+            <p style="font-size: 18px;"><i class="fab fa-linkedin fa-lg" aria-hidden="true"></i> Kelik Is Cahyanto</p>    
+            <p style="font-size: 18px;"><i class="far fa-envelope-open fa-lg" aria-hidden="true"></i> kelikisc@gmail.com</p>
+              </div>
             </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-7 text-md-left ml-3 mt-3">
-
-              <!-- Excerpt -->
-              <a href="#!" class="green-text">
-                <h6 class="h6 pb-1"><i class="fas fa-desktop pr-1"></i> Work</h6>
-              </a>
-
-              <h4 class="h4 mb-4">This is title of the news</h4>
-
-              <p class="font-weight-normal">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque, totam
-                rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-                dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur.</p>
-              <p class="font-weight-normal">by <a><strong>Carine Fox</strong></a>, 19/08/2016</p>
-
-              <a class="btn btn-success">Read more</a>
-
-            </div>
-            <!-- Grid column -->
-
           </div>
-          <!-- Grid row -->
 
         </div>
-        <!-- News jumbotron -->
-
       </section>
 
     </div>
@@ -582,36 +562,18 @@
 
     <!-- Social icons -->
     <div class="pb-4">
-      <a href="https://www.facebook.com/" target="_blank">
-        <i class="fab fa-facebook-f mr-3"></i>
-      </a>
+      <a href="https://mdbootstrap.com/education/bootstrap/" target="_blank">
+        <i class="fab fa-mdb ml-1 fa-lg mr-2"></i></a>
 
-      <a href="https://twitter.com/" target="_blank">
-        <i class="fab fa-twitter mr-3"></i>
-      </a>
-
-      <a href="https://instagram.com/" target="_blank">
-        <i class="fab fa-instagram mr-3"></i>
-      </a>
-
-      <a href="https://ask.fm/" target="_blank">
-        <i class="fab fa-amilia mr-3"></i>
-      </a>
-
-      <a href="http://mail.unj.ac.id/" target="_blank">
-        <i class="fas fa-envelope-open mr-3"></i>
-      </a>            
+      <a href="https://github.com/" target="_blank">
+        <i class="fab fa-github fa-lg ml-2"></i></a>           
 
     </div>
     <!-- Social icons -->
 
     <!--Copyright-->
     <div class="footer-copyright py-3">
-      Kelik Is Cahyanto with
-      	<a href="https://mdbootstrap.com/education/bootstrap/" target="_blank">
-      	<i class="fab fa-mdb ml-1 mr-1"></i></a>
-      	<a href="https://github.com/" target="_blank">
-      	<i class="fab fa-github ml-1"></i></a>
+      Kelik Is Cahyanto
     </div>
     <!--/.Copyright-->
 
