--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <!--Main layout-->
   <main>
     <nav class="navbar navbar-expand-lg navbar-dark indigo" id="top">
-      <a class="navbar-brand font-weight-normal" href="#"><i class="fas fa-desktop pr-1"></i> Portofolio</a>
+      <a class="navbar-brand font-weight-normal" href="#"><i class="fas fa-align-right"></i> Portofolio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -71,13 +71,16 @@
           <span>
             <ul class="navbar-nav font-weight-normal">
             <li class="nav-item">
-              <a class="nav-link" href="#study">Study</a>
+              <a class="nav-link" href="#exp">Experiences</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#award">Award</a>
+              <a class="nav-link" href="#awards">Awards</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#org">Clubs</a>
+              <a class="nav-link" href="#org">Organizations</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Resume</a>
             </li>
           </ul>
           </span>
@@ -113,7 +116,7 @@
                     Passionate in user experience research and product development.</p>
                   <p class="font-weight-normal"><a><strong>DKI Jakarta</strong></a>, Indonesia</p>
 
-                  <a class="btn btn-indigo mb-4">Read more</a>
+                  <a class="btn btn-indigo mb-4" href="#exp">Read more</a>
 
                 </div>
                 <!-- Grid column -->
@@ -356,7 +359,7 @@
             <hr class="my-4">
 
       <!--Section: Awards-->
-      <section id="study" class="wow fadeIn pt-4" style="margin-top: 5%">
+      <section id="awards" class="wow fadeIn pt-4" style="margin-top: 5%">
 
         <!--Grid row-->
         <div class="wow fadeIn">
@@ -534,12 +537,12 @@
                 <img src="img/contact.png" class="img-fluid mb-4" alt="" width="290" height="290" style="float: right;">
               </div>
 
-              <div class="col-md-6">
+              <div class="col-md-6 mb-4">
                 <h3 class="h3 mb-4">Contact</h3>
 
             <p class="text-justify" style="font-size: 18px">
               Look forward to work together with you. 
-              Directly contact me on my social media and create something good for people! 
+              Directly contact me on my social media and let's create something good for people! 
             </p>
             <br>
             <p style="font-size: 18px;"><i class="fab fa-linkedin fa-lg" aria-hidden="true"></i> Kelik Is Cahyanto</p>    
