update margin top

--- a/index.html
+++ b/index.html
@@ -129,10 +129,9 @@
 
       <br>
       <hr class="my-4">
-      <br>
 
       <!--Section: Projects-->
-      <section id="exp" class="wow fadeIn">
+      <section id="exp" class="wow fadeIn" style="margin-top: 5%">
 
         <!--Grid row-->
         <div class="wow fadeIn">
@@ -140,7 +139,7 @@
           <!--Grid column-->
           
           <div class="col-sm-12 col-md-12">
-            <h3 class="h3 mb-4 pt-4">Experiences</h3>
+            <h3 class="h3 mb-4">Experiences</h3>
             <p class="text-justify mb-4" style="font-size: 18px">
               Here is a short description of my software developments experience you might 
               want to see with each user interface design highlight.</p>
@@ -339,7 +338,7 @@
           <div class="col-md-5 mb-4">
 
             <!-- Project 3 Desc-->
-            <h4 class="h4 mb-3 pt-1">National Science Festival Web</h4>
+            <h4 class="h4 mb-4 pt-1">National Science Festival Web</h4>
             <p style="text-align: justify; font-size: 17px">Mathematics and Science
             Faculty of UNJ held an annual National Science Festival every year. Olympiad
             and competition is held for all across students in Indonesia from primary schools,
@@ -359,7 +358,7 @@
             <hr class="my-4">
 
       <!--Section: Awards-->
-      <section id="awards" class="wow fadeIn pt-4" style="margin-top: 5%">
+      <section id="awards" class="wow fadeIn" style="margin-top: 5%">
 
         <!--Grid row-->
         <div class="wow fadeIn">
@@ -398,7 +397,7 @@
                           <img src="img/2.jpg" class="img-fluid mb-4" alt="" width="230" height="230">
                         </a><br>
                         <h5 class="h5">Speaking Competition</h5>
-                        <p>Winning 2nd place Story Telling Competition in Mathematics Festival of UNJ in 2019</p>
+                        <p>Runner up Story Telling Competition in Mathematics Festival of UNJ in 2019</p>
                       </div>
 
                     </div>
@@ -412,7 +411,7 @@
                           <img src="img/3.jpg" class="img mb-4" alt="" width="230" height="230">  
                         </a><br>
                         <h5 class="h5">Writing Competition</h5>
-                        <p>Winning 2nd place Essay Competition in UNJ's Teachers Day annual event in 2019</p>
+                        <p>Runner up Essay Competition in UNJ's Teachers Day annual event in 2019</p>
                       </div>
 
                     </div>
